--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				position: fixed;
 				top: 0;
 				width: 100%;
+				box-shadow: 0px 2px 5px #888888;
 			}
 			.topbtn {
 				color: #252525;
@@ -27,6 +28,29 @@
 			#counfo {
 				margin-top: 60px;
 			}
+			.dropnic {
+				color: #252525;
+				font-size: 20px;
+				border: none;
+				background: #ffffff;
+				border-bottom: solid;
+				border-bottom-width: 7px;
+				border-bottom-color: #ffc107;
+				width: 70%;
+				padding: 5px 0px 5px 0px;
+			}
+			.labdrop {
+				margin: 0;
+				font-size: 20px;
+				background: #ff9800;
+				color: #ffffff;
+				border: none;
+				padding: 9px 0px 9px 0px;
+				width: 30%;
+			}
+			.minibtn {
+				border-radius: 
+			}
 		</style>
 	</head>
 	<body>
@@ -34,10 +58,17 @@
 			<div id="opnum">
 				<button class="topbtn" style="color: #ff6e00; font-weight: bold; border-bottom-color: #ff6e00; background: #ffffff;">単品検索</button><button class="topbtn">フルコース検索</button>
 			</div>
-			<select id="counfo">
+			<button class="labdrop">STYLE</button><select id="counfo" class="dropnic">
 				<option value="you">和食</option>
 				<option value="wa">洋食</option>
 			</select>
+			<br><br><br>
+			<button class="labdrop">候補</button>
+			<button class="minibtn">早</button>
+			<button class="minibtn">楽</button>
+			<button class="minibtn">安</button>
+			<button class="minibtn">味</button>
+			<button class="minibtn">美</button>
 		</div>
 		<div id="uib"></div>
 	</body>
